appId: com.ikuradon.Astrenza
---
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: PXGGridLayout-Info
          index: 0
          optional: true
      - tapOn:
          id: PXGGridLayout-Info
          index: 1
          optional: true
      - tapOn:
          text: "Photo, .*"
          index: 0
          optional: true
      - tapOn:
          text: "Photo, .*"
          index: 1
          optional: true
      - tapOn:
          text: Add
          optional: true
      - tapOn:
          text: Done
          optional: true
      - tapOn:
          point: "90%,18%"
          optional: true
